# func_hooker

./: .gitignore  README.md  meson.build  meson_options.txt
hook/: hook.c
scripts/: gen.py  get_arch.py
src/arch/: vars.h
src/arch/x86/: jmp.h
src/arch/x86_64/: hook.h  jmp.h  pivot.h
